@@ -14,7 +14,7 @@ class GitWorkingCopy(common.BaseWorkingCopy):
     def __init__(self, *args, **kwargs):
         super(GitWorkingCopy, self).__init__(self, *args, **kwargs)
 
-    def git_checkout(self, source, verbose=False):
+    def git_checkout(self, source, **kwargs):
         name = source['name']
         path = source['path']
         url = source['url']
@@ -28,10 +28,10 @@ class GitWorkingCopy(common.BaseWorkingCopy):
         stdout, stderr = cmd.communicate()
         if cmd.returncode != 0:
             raise GitError("git cloning for '%s' failed.\n%s" % (name, stderr))
-        if verbose:
+        if kwargs.get('verbose', False):
             return stdout
 
-    def git_update(self, source, verbose=False):
+    def git_update(self, source, **kwargs):
         name = source['name']
         path = source['path']
         logger.info("Updating '%s' with git." % name)
@@ -42,10 +42,10 @@ class GitWorkingCopy(common.BaseWorkingCopy):
         stdout, stderr = cmd.communicate()
         if cmd.returncode != 0:
             raise GitError("git pull for '%s' failed.\n%s" % (name, stderr))
-        if verbose:
+        if kwargs.get('verbose', False):
             return stdout
 
-    def checkout(self, source, verbose=False):
+    def checkout(self, source, **kwargs):
         name = source['name']
         path = source['path']
         if os.path.exists(path):
@@ -54,7 +54,7 @@ class GitWorkingCopy(common.BaseWorkingCopy):
             else:
                 raise GitError("Checkout URL for existing package '%s' differs. Expected '%s'." % (name, source['url']))
         else:
-            return self.git_checkout(source, verbose=verbose)
+            return self.git_checkout(source, **kwargs)
 
     def matches(self, source):
         name = source['name']
@@ -68,7 +68,7 @@ class GitWorkingCopy(common.BaseWorkingCopy):
             raise GitError("git remote for '%s' failed.\n%s" % (name, stderr))
         return (source['url'] in stdout.split())
 
-    def status(self, source, verbose=False):
+    def status(self, source, **kwargs):
         name = source['name']
         path = source['path']
         cmd = subprocess.Popen(["git", "status"],
@@ -81,18 +81,19 @@ class GitWorkingCopy(common.BaseWorkingCopy):
             status = 'clean'
         else:
             status = 'dirty'
-        if verbose:
+        if kwargs.get('verbose', False):
             return status, stdout
         else:
             return status
 
-    def update(self, source, verbose=False):
+    def update(self, source, **kwargs):
         name = source['name']
         path = source['path']
+        force = kwargs.get('force', False)
         if not self.matches(source):
             raise GitError("Can't update package '%s', because it's URL doesn't match." % name)
-        if self.status(source) != 'clean':
+        if self.status(source) != 'clean' and not force:
             raise GitError("Can't update package '%s', because it's dirty." % name)
-        return self.git_update(source, verbose=verbose)
+        return self.git_update(source, **kwargs)
 
 wc = GitWorkingCopy('git')
