@@ -8,7 +8,7 @@ class MercurialError(common.WCError):
     pass
 
 class MercurialWorkingCopy(common.BaseWorkingCopy):
-    def hg_clone(self, source, verbose=False):
+    def hg_clone(self, source, **kwargs):
         name = source['name']
         path = source['path']
         url = source['url']
@@ -23,10 +23,10 @@ class MercurialWorkingCopy(common.BaseWorkingCopy):
         if cmd.returncode != 0:
             raise MercurialError(
                 'hg clone for %r failed.\n%s' % (name, stderr))
-        if verbose:
+        if kwargs.get('verbose', False):
             return stdout
 
-    def hg_pull(self, source, verbose=False):
+    def hg_pull(self, source, **kwargs):
         name = source['name']
         path = source['path']
         logger.info('Updating %r with mercurial.' % name)
@@ -36,10 +36,10 @@ class MercurialWorkingCopy(common.BaseWorkingCopy):
         if cmd.returncode != 0:
             raise MercurialError(
                 'hg pull for %r failed.\n%s' % (name, stderr))
-        if verbose:
+        if kwargs.get('verbose', False):
             return stdout
 
-    def checkout(self, source, verbose=False):
+    def checkout(self, source, **kwargs):
         name = source['name']
         path = source['path']
         if os.path.exists(path):
@@ -50,7 +50,7 @@ class MercurialWorkingCopy(common.BaseWorkingCopy):
                     'Source URL for existing package %r differs. '
                     'Expected %r.' % (name, source['url']))
         else:
-            return self.hg_clone(source, verbose=verbose)
+            return self.hg_clone(source, **kwargs)
 
     def matches(self, source):
         name = source['name']
@@ -64,7 +64,7 @@ class MercurialWorkingCopy(common.BaseWorkingCopy):
                 'hg showconfig for %r failed.\n%s' % (name, stderr))
         return (source['url'] + '\n' == stdout)
 
-    def status(self, source, verbose=False):
+    def status(self, source, **kwargs):
         name = source['name']
         path = source['path']
         cmd = subprocess.Popen(
@@ -72,21 +72,22 @@ class MercurialWorkingCopy(common.BaseWorkingCopy):
             stderr=subprocess.PIPE)
         stdout, stderr = cmd.communicate()
         status = stdout and 'dirty' or 'clean'
-        if verbose:
+        if kwargs.get('verbose', False):
             return status, stdout
         else:
             return status
 
-    def update(self, source, verbose=False):
+    def update(self, source, **kwargs):
         name = source['name']
         path = source['path']
+        force = kwargs.get('force', False)
         if not self.matches(source):
             raise MercurialError(
                 "Can't update package %r, because it's URL doesn't match." %
                 name)
-        if self.status(source) != 'clean':
+        if self.status(source) != 'clean' and not force:
             raise MercurialError(
                 "Can't update package %r, because it's dirty." % name)
-        return self.hg_pull(source, verbose=verbose)
+        return self.hg_pull(source, **kwargs)
 
 wc = MercurialWorkingCopy('hg')
